istio-retry/assets/backend1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend1
  name: backend1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
        layer: be
    spec:
      containers:
      - image: quinont/repeater:1
        name: backend1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend1
  name: backend1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: backend1
