istio-retry/assets/bff.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bff
  name: bff
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bff
  template:
    metadata:
      labels:
        app: bff
        layer: bff
    spec:
      containers:
      - image: quinont/repeater:1
        name: bff
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bff
  name: bff
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: bff
